--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -8,6 +8,29 @@
 %Samspillet Åsmund->Turid->Knut med difflikn->diskretisering->programmering
 
 \section{Kommunikasjon og samspill}
+Det kommunikasjonsnettverka som blei nytta på gruppa vår opent nettverk og sirkel nettverk. I eit opent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kjem tydelig fram i diskusjoner på gruppa der det er fri flyt av ideer og meininger. Når ein avgjørelse blir tatt på gruppa starter me ofte med ein open diskusjon, og utvekslinger av meininger. Før ein avgjørelse blir tatt har me vanligvis hatt ein runde rundt bordet der alle får uttrykkt sin meining om saken. Dette er ein form for sirkel nettverk, der eit medlem uttrykker sin meining før han sender ordet videre til sidemannen. Dette er ein kommunikasjonsform som har utviklet seg naturlig på gruppa. Særlig i prosessdelen har det falt naturlig å ta ein runde rundt bordet for å høyre dei ulike medlemmenes meininger od følelser. Det er ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i ein rolle som ordstyrer. 
+\\
+\\
+Det var tidleg lagt normer som skulle gjelde for kommunikajson i gruppa. I gruppekontrakten innførte me kaffimøte om morgenen, for å diskutere framgangen og planleggje dagen vidare. (Her opna me og for at folk kunne ta opp ting før me starta dagen.) Me var likevel dårleg til å gjennomføre dette tiltaket i starten. Dette førte til at nokon av medlemmene satt uten arbeidsoppgåver, og uten oversikt over kva dei andre arbeidet med. 
+Situasjon Joakim:
+Det blei dermed lagt større vekt på gjennomførelsen av kaffimøte, noko som bedra effektiviteten til gruppa ved å sysselsette alle medlemmene og førte til at kvart medlem hadde ein større oversikt over kva dei andre arbeida med. I tillegg satt kaffimøte ein offisiell start på dagen, og bidrog til eit større samhold i gruppa. 
+\\
+\\
+Andre tiltak?
+\\
+\\
+Miljøet og fysiske faktorer kan ha ein stor innverknad på kommunikasjonen i gruppa. Me har sjølv merka att kommunikasjonen ofte blir skarpere og meir ampert når me har jobba over ein lengre og intensiv periode uten pauser. Dette har me prøvd å gjort noko med ved å være flinkere til å ta pauser. Spesielt når nokon merker at andre medlemmer på gruppa byrjar å bli slitne og irritable er det viktig at andre tar initiativ til pauser. 
+Rommet me satt på hadde og dårlig ventilasjon, noko som førte til at gruppemedlemmer fort blei tunge i hovudet og slitne. I etterkant ser me at me kunne vore meir selektive på lokale me valgte å jobbe i, siden miljøet har mykje å sei for trivselen til medlemmene.
+\\
+(Korleis gruppemedlemmer velgjer sittearrangementet, kan sei mykje om dynamikken i gruppa. Me arrangerte bordet me satt rundt som eit kvadrat. Det var dermed ingen plasser rundt bordte som ga ein høgare status til nokon av medlemmene, noko som understreker den flate strukturen på gruppa.)
+\\
+\\
+Ein annan viktig faktor på gruppa som letta kommunikasjonen på gruppa er bruk av humor. Dette er noko som går igjen i gruppa vår. Heilt frå byrjinga har det vore ei lett og god stemning mellom gruppemedlemmene. Dette gjer at me har ein lavare terkels for å uttrykke sterke meininger eller uenighet. Me har og ein høg grad av sjølvironi på gruppa. Det at gruppemedlemmer ikkje tar seg sjølv så høytidlige, gjer at det blir lettere å ta opp ikkje-tema. Gjennom studier er det og vist at effektiviteten til gruppa auker ved bruk av passende og ofte sjølvdirektet humor. Gjennom bruk av humor på gruppa, har me blitt tryggere på kvarandre, og dermed jobba sammen meir effektivt. Me er ikkje redde for å tråkke kvarandre på "tærne", noko som gjer at me kan være den me er. 
+\\
+\\
+Aksjoner for å betre gruppekommunikasjonen. Kaffipause, runde rundt bordet osv.!
+\section{Situasjon gruppelogg 12}
+Me har og hatt framføring av grupperapport og prossessrapport idag. Gruppa er fornøyd med egen innsats, då me fekk sagt det me skulle innenfor dei rammene som var gitt. I ein slik situasjon merkar me og at den tryggheten og innbyrde tilliten me har i gruppa er med å bidrar til ein større trygghet i framføringa. Det at me veit me har tillit frå gruppa gjer at me tør å improvisere meir i framføringa, noko som gjør framføringa meir levende. Me merker og at dei andre på gruppene følgjer med på kva ein seier når ein framføring, og er flinke til å hjelpe ein vidare dersom ein sett seg fast på eit ord eller setning. Dette virker som ei «sikringsline» som gjer at me tør å gå litt utenfor våre respektiove komfortsoner.  Me klarte og å beholde humoren me har ellers i gruppa, noko som gjer at spenninga blant dei gruppemedlemmer som er ukomfortable med å stå foran ein mengde blir lavare. "Humor tends to promote cohesiveness and reduce tension in groups" (Bloch, Browning \& McGrath 1983).
 %Situasjon: øvelsen med evaluering ``det enkelte teammedlem''
 %Situasjon: legomannen - bruk gruppelogg, men prøv å dra parallell til hvordan vi arbeider generelt.
 
