--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -169,15 +169,11 @@ Punkt 7 dreier seg om normer, dvs. regler om medlemmenes oppførsel og hva som s
 Punkt 8 diskuterer karaktertrekk ved god gruppesamarbeid. Disse er bl.a. god kommunikasjon, vennlig atmosfære, stor innsatsvilje, og stor grad av arbeidsfordeling.
 
 \section{Kommunikasjonsteori}
-%
 %look at patterns of group communication and the variables that influence communication effectiveness
 %
-For at ei gruppe skal kunne fungere effektivt, er det viktig at medlemmer klarer å kommuniserer enkelt og effektivt. Særlig i en tværrfaglig gruppe er det viktig at medlemmer er effektive i å formidle videre den informasjonen dei innehar. (Då løysninga av problemet i stor grad avhenger av evnen til gruppa har til å flette sammen informasjon som fleire medlemmer innehar, er det viktig at mottakeren av informasjon sitter igjen med det samme bilde som sender prøver å formidle.) Det er derfor viktig å he ein grunnleggende forståelse for gruppekommikasjon.
+For at ei gruppe skal kunne fungere effiktivt, er det viktig at medlemmer klarer å kommuniserer enkelt og effektivt. Særlig i en tværrfaglig gruppe er det viktig at medlemmer er effektive i å formidle videre den informasjonen dei innehar. (Då løysninga av problemet i stor grad avhenger av evnen til gruppa har til å flette sammen informasjon som fleire medlemmer innehar, er det viktig at mottakeren av informasjon sitter igjen med det samme bilde som sender prøver å formidle.) Det er derfor viktig å he ein grunnleggende forståelse for gruppekommikasjon.
 For å forstå gruppekommunikasjonen i eit team, er det to ting som er viktige å sjå nærmere på; kommunikasjonsmønsteret/ kommunikasjonsnettverk og kommunikasjonseffektiviteten. Ved kommunikasjonsmønsteret meiner me her kven som kommunniserer med kven. Me kan her snakke om ein einvegskommunikajsone, der lederen adresserer gruppa, eller ein toveiskommunikasjon, som t.d. myldring blant gruppemedlemmer. Kommunikasjonseffektiven er her definert som evnen til å formidle ein beskjed på ein slik måte at mottakeren tolker beskjeden slik som sender sjølv har tenkt.
-Variable som kan verke inn på gruppe kommunikasjonen er normer på gruppa, humor osv.
-\\
-\\
-Det kommunikasjonsnettverka som blei nytta på gruppa vår opent nettverk og sirkel nettverk. I eit opent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kjem tydelig fram i diskusjoner på gruppa der det er fri flyt av ideer og meininger. Når ein avgjørelse blir tatt på gruppa starter me ofte med ein open diskusjon, og utvekslinger av meininger. Før ein avgjørelse blir tatt har me vanligvis hatt ein runde rundt bordet der alle får uttrykkt sin meining om saken. Dette er ein form for sirkel nettverk, der eit medlem uttrykker sin meining før han sender ordet videre til sidemannen. Dette er ein kommunikasjonsform som har utviklet seg naturlig på gruppa. Særlig i prosessdelen har det falt naturlig å ta ein runde rundt bordet for å høyre dei ulike medlemmenes meininger od følelser. Det er ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i ein rolle som ordstyrer. 
+Variable som kan verke inn på gruppe kommunikasjonen er normer på gruppa, konkurranse innad i gruppa, arbeidsmiljet, sittearrangementer og humor innad i gruppa.
 \\
 \section{Roller}
 «I grupparbete spelar rollerna roll» (Stefan Jern, (1))\\
