--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -18,7 +18,6 @@
 	\clearpage		%Ny side
 
 %Innholdsfortegnelse (automagisk)
-	\setcounter{tocdepth}{1}
 	\tableofcontents
 	\clearpage		%Blank side
 	\thispagestyle{empty}	%Uten sidetall
@@ -36,6 +35,6 @@
 %Referanser:
 	\bibliographystyle{plain}
 	\bibliography{referanser.bib}
-	%\coffee{1}
+	\coffee{1}
 \end{document}
 
