Skrev om meg selv i tredje person

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -24,9 +24,9 @@ ordensmenneske, som har oversikt over de ulike trådene og syr de sammen til det
 endelige resultate, både hva angår prosess og prosjekt.
 
 \person{Joakim}
-Jeg studerer sivilingeniør Bygg- og miljøteknikk, med
+Joakim studerer sivilingeniør Bygg- og miljøteknikk, med
 spesialiseringen innenfor konstruksjonsteknikk og beregningsmekanikk. Fra før
-har jeg erfaring med teamarbeid gjennom førsteklassefaget Fysisk
+har han erfaring med teamarbeid gjennom førsteklassefaget Fysisk
 Miljøplanlegging, som på lik linje med EiT hadde en prosjektrapport og
 prosessrapport som evalueringsform.
 
