--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -84,7 +84,7 @@ har noe å gjøre.
 Paul går i 4.klasse på studieretningen fysikk og matematikk, med spesialising i statistikk. Han har erfaring fra gruppearbeid fra prosjektoppgaver i statistikk, numerikk og matematisk modellering.
 
 \subsection*{Innstilling til gruppearbeid}
-Paul liker å ha oversikt over arbeidsoppgaver og at gruppa har en framdriftsplan. Han er nøye med det han gjør, og står på når han har fått en konkret arbeidsoppgave. Han er flink til å lytte til andres meninger, og kommer på ting som han kan bidra med i gruppa.
+Jeg liker å ha oversikt over arbeidsoppgaver og at gruppa har en framdriftsplan. Jeg er nøye med det jeg gjør, og står på når jeg har fått en konkret arbeidsoppgave. Jeg er flink til å lytte til andres meninger, og kommer på ting som jeg kan bidra med i gruppa.
 
 \subsection*{Gruppa om Paul}
 Paul er en stillferdig person i gruppesammenheng, men på tomannshånd er han mer
