--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -25,7 +25,7 @@ selvfølelse blant medlemmene.
 
 Disse kriteriene er avhengige av hverandre, og for at en gruppe skal være
 effektiv må den møte alle tre kritierer. Bryter gruppen på ett punkt vil det
-påvirke de andre, for eksempel: Hvis en gruppe håndterer konflikter på en slik
+påvirke de andre. For eksempel: Hvis en gruppe håndterer konflikter på en slik
 måte at tilliten mellom medlemmene avtar, vil det på sikt føre til at medlemmene
 holde informasjon tilbake fra resten av gruppen. Dette vil igjen føre til at
 nøkkelinformasjon ikke er tilgjengelig for samtlige gruppemedlemmer, og gruppen
@@ -38,18 +38,18 @@ medlem er sterk nok til å takle negativ tilbakemelding. I tillegg er det viktig
 
 Det er også viktig at man kommuniserer på en slik måte at mottaker og avsender
 har samme oppfatning av hva som blir sagt. Altså må man passe på at det man sier
-blir oppfattet korrekt, dette kan oppnås ved å ikke bare avsløre hva du har
+blir oppfattet korrekt. Dette kan oppnås ved å ikke bare avsløre hva du har
 funnet ut, men også \emph{hvordan} du kom til den konklusjonen. Ved å bruke
 denne kommunikasjonsmetoden oppmuntres andre til å finne ``hull'' i logikk og
-løsningsmetode, i tillegg til at mottaker blir tvunget til å komme med
+løsningsmetode, i tillegg til at mottaker blir tvunget til å komme med motargumenter.
 
-motargumenter. Effektive grupper tester også ut sine antagelser, det vil si at
+Effektive grupper tester også ut sine antagelser, det vil si at
 dersom et gruppemedlem sier noe svarer mottaker med å fortelle hva han/hun tror
 den andre mente. Man minimerer da muligheten for misforståelser og videre
 frustrasjon. $\\$
 
-Effektive grupper må også ha klare definerte rammer for oppgaven som skal løses, 
-det er også viktig at hvert gruppemedlem kjenner (og klarer å uttrykke) denne
+Effektive grupper må også ha klare definerte rammer for oppgaven som skal løses. 
+Det er også viktig at hvert gruppemedlem kjenner (og klarer å uttrykke) denne
 oppgaven. Gruppen må også sørge for at hvert medlem har en klar oppfatning av
 sin egen rolle i oppnåelsen av gruppeoppgaven. I samme omgang bør det sørges for
 at beslutningsprosesser og hierarki i gruppen er klart definert og forstått. $\\$
@@ -58,8 +58,7 @@ En enkel, men god, måte og oppnå alle disse punktene på, er å bruke endel ti
 starten på å få til en bra samarbeidskontrakt. Der hvor tema som lederskap,
 problemstilling, beslutningsmønstre, oppgavefordeling osv. kan innlemmes. Se
 \cref{sec:kontrakt}. Schwarz har kokt alt dette ned til 9 grunnregler som skal sørge for
-gruppeeffektivitet. Se \cref{sec:grunnregler}.
-\clearpage
+gruppeeffektivitet. (Se \cref{sec:grunnregler}.)
 
 \subsection{Grunnregler}
 \label{sec:grunnregler}
@@ -137,7 +136,7 @@ et personlig nivå, på denne måten forsikrer man at diskusjonene mellom person
 i gruppa blir friere og bedre.
 
 \section{Wheelan}
-ubsection{Effective teammedlemmer}
+\subsection{Effective teammedlemmer}
 
 Wheeland beskriver gruppemedlemmer's oppførsel og holdninger i effektive grupper. En viktig del ved å være en effektiv gruppemedlem består i å vurdere sin egen oppførsel og holdning og måten man kommuniserer med gruppa på. Teorien er presentert i form av retningslinjer. 
 
@@ -156,38 +155,37 @@ Punkt 1 kaller Wheeland for ''the fundamental attribution error'', fordi vi ofte
 
 Punkt 2 dreier seg om å være klar over hva som foregår i gruppearbeidet. Hvis man ikke forstår hva som foregår, må man våge å spørre. Å stille spørsmål til hele gruppa vil føre til en rikere diskusjon og vil klargjøre ting for alle gruppemedlemmer. \\
 
-Punkt 3 tar opp problemet med at medlemmer i gruppa ikke tør å si det de mener fordi de ofte klassifiserer andre i gruppa, og ut i fra det angir dem høyere eller lavere status. Disse medlemmene kan bli ignonert i gruppa, noe som fører til at gruppa blir mindre produktiv. En måte å sikre at alle blir hørt på er så enkelt som å ta en runde rundt bordet for å høre hva hver og en har å si. \\
+Punkt 3 tar opp problemet med at medlemmer i gruppa ikke tør å si det de mener fordi de ofte klassifiserer andre i gruppa, og ut i fra det angir dem høyere eller lavere status. Disse medlemmene kan bli ignorert i gruppa, noe som fører til at gruppa blir mindre produktiv. En måte å sikre at alle blir hørt på er så enkelt som å ta en runde rundt bordet for å høre hva hver og en har å si. \\
 
 Punkt 4 handler om oppgaveorientert diskusjon i gruppen. Forskning tyder på at suksessfulle grupper bruker om lag 70-80 \% av tiden sin til å diskutere oppgave og mål. Men ofte hender det at gruppa går seg bort i en lang diskusjon om noe annet. \\
 
 Punkt 5 diskuterer effektive måter for oppgaveløsning og det å ta beslutninger. Det nevnes fire steg som kan følges: Å innse problemet, diagnotisere problemet, ta beslutningen, og akseptere og gjennomføre beslutningen. I praksis består de to første stegene i å planlegge strategier for å løse problemet. Når man så skal ta en beslutning er det ikke noe klart svar på hvilken beslutningsmåte som er best, men gruppa skal velge en beslutningsmåte der alle medlemmer kan akseptere beslutningen.  \\
 
-Punkt 6 handler om gruppas avtale. Hvis gruppas medlemmer bare er middelsmådige enige, blir resultatet også middelsmådig. Hvis medlemmene derimot er enige om å gjøre en best mulig jobb og løse problemer på best mulig måte, er det større sannsynlighet for at resultatet blir bra. Frihet til å uttale seg er nevnt i punkt 3. \\
+Punkt 6 handler om gruppas avtale. Hvis gruppas medlemmer bare er middelmådige enige, blir resultatet også middelmådig. Hvis medlemmene derimot er enige om å gjøre en best mulig jobb og løse problemer på best mulig måte, er det større sannsynlighet for at resultatet blir bra. Frihet til å uttale seg er nevnt i punkt 3. \\
 
 Punkt 7 dreier seg om normer, dvs. regler om medlemmenes oppførsel og hva som skal gjøres. Normer er nødvendige for å samordne gruppas arbeid mot et felles mål. Spesielt er normer viktige når medlemmene er uenige i hvordan ting skal gjøres. \\
 
-Punkt 8 diskuterer karaktertrekk ved god gruppesamarbeid. Disse er bl.a. god kommunikasjon, vennlig atmosfære, stor innsatsvilje, og stor grad av arbeidsfordeling.
+Punkt 8 diskuterer karaktertrekk ved god gruppesamarbeid. Disse er bl.a. god kommunikasjon, vennlig atmosfære, stor innsatsvilje, og stor grad av arbeidsfordeling.\\
 
 \section{Kommunikasjonsteori}
 %look at patterns of group communication and the variables that influence communication effectiveness
 %
-For at ei gruppe skal kunne fungere effiktivt, er det viktig at medlemmer klarer å kommuniserer enkelt og effektivt. Særlig i en tværrfaglig gruppe er det viktig at medlemmer er effektive i å formidle videre den informasjonen dei innehar. (Då løysninga av problemet i stor grad avhenger av evnen til gruppa har til å flette sammen informasjon som fleire medlemmer innehar, er det viktig at mottakeren av informasjon sitter igjen med det samme bilde som sender prøver å formidle.) Det er derfor viktig å he ein grunnleggende forståelse for gruppekommikasjon.
-For å forstå gruppekommunikasjonen i eit team, er det to ting som er viktige å sjå nærmere på; kommunikasjonsmønsteret/ kommunikasjonsnettverk og kommunikasjonseffektiviteten. Ved kommunikasjonsmønsteret meiner me her kven som kommunniserer med kven. Me kan her snakke om ein einvegskommunikajsone, der lederen adresserer gruppa, eller ein toveiskommunikasjon, som t.d. myldring blant gruppemedlemmer. Kommunikasjonseffektiven er her definert som evnen til å formidle ein beskjed på ein slik måte at mottakeren tolker beskjeden slik som sender sjølv har tenkt.
-Variable som kan verke inn på gruppe kommunikasjonen er normer på gruppa, konkurranse innad i gruppa, arbeidsmiljet, sittearrangementer og humor innad i gruppa.
-\\
+For at ei gruppe skal kunne fungere effiktivt, er det viktig at medlemmer klarer å kommuniserer enkelt og effektivt. Særlig i en tværrfaglig gruppe er det viktig at medlemmer er effektive i å formidle videre den informasjonen dei innehar. (Då løysninga av problemet i stor grad avhenger av evnen til gruppa har til å flette sammen informasjon som fleire medlemmer innehar, er det viktig at mottakeren av informasjon sitter igjen med det samme bilde som sender prøver å formidle.) Det er derfor viktig å he ein grunnleggende forståelse for gruppekommikasjon.\\
+
+For å forstå gruppekommunikasjonen i eit team, er det to ting som er viktige å sjå nærmere på; kommunikasjonsmønsteret/ kommunikasjonsnettverk og kommunikasjonseffektiviteten. Ved kommunikasjonsmønsteret meiner me her kven som kommunniserer med kven. Me kan her snakke om ein einvegskommunikasjon, der lederen adresserer gruppa, eller ein toveiskommunikasjon, som t.d. myldring blant gruppemedlemmer. Kommunikasjonseffektiven er her definert som evnen til å formidle ein beskjed på ein slik måte at mottakeren tolker beskjeden slik som sender sjølv har tenkt.
+Variable som kan verke inn på gruppe kommunikasjonen er normer på gruppa, konkurranse innad i gruppa, arbeidsmiljet, sittearrangementer og humor innad i gruppa.\\
+
 \section{Roller}
 «I grupparbete spelar rollerna roll» (Stefan Jern, (1))\\
 
-«Ei rolle kan defineres som ein spesiell type særegenhet, som definerer din plass på gruppa». Ei gruppe består av ulike individ som kvar har sine særegenskaper. Desse personlige trekka er ein faktor som er med på å definere kva rolle eit medlem vil spele på gruppa.  Når ei gruppe går sammen, byggjes det forventninger til rolla dei andre vil ha på gruppa utfrå inntrykket dei får av individet. Dine egne forventninger og gruppas forventninger til di rolle er i stor grad med på å forme den rolla du vil ha i gruppa vidare. I eit gruppesamarbeid med flat struktur snakker me her om informelle roller. Informelle roller er roller som vekser fram gjennom samspelet i gruppa. Informelle roller i eit gruppesamarbeid kan i hovudsak deles i to roller; instrumentelle roller og sosio-emosjonelle roller. 
-\\
-\\
-I Robert-Bales likevektsteori statuerer han viktigheten ved ein balanse mellom arbeidsoppgåver og sosial-emosjonelle aktiviteter i effektive grupper. I effektive grupper ser ein derfor ofte at eit medlem trer inn i rolla som instrumentell leder, mens ein annan trer inn i rolla som sosial-emosiell leder. Kjenneteiknet på ein oppgåve-leder er at det er ofte han som setter igang aksjoner for å sikre at målet til gruppa blir nådd (oppgåveretta aksjoner), mens den sosiall-emosielle lederen setter igang aksjoner for å oppretthalde og forbedre interrelasjonene i gruppa (relasjonsretta aksjoner).
-\\
-\\
-I ein flatstrukturert gruppe er lederrollen ofte avhengig av situasjoner gruppa møter. Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid. Ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa, og kan vera enten oppgåveretta aksjoner og relasjonsretta/samholdsretta aksjoner. 
+Ei rolle kan defineres som ein spesiell type særegenhet, som definerer din plass på gruppa. Ei gruppe består av individ med ulike personlighet og særegenskaper. Desse personlige trekka er ein faktor som er med på å definere kva rolle eit medlem vil spele på gruppa.  Når ei gruppe går sammen, byggjes det forventninger til rolla dei andre vil ha på gruppa utfrå inntrykket dei får av individet. Dine egne forventninger og gruppas forventninger til di rolle er i stor grad med på å forme den rolla du vil ha i gruppa vidare. I eit gruppesamarbeid med flat struktur snakker me her om informelle roller. Informelle roller er roller som vekser fram gjennom samspelet i gruppa. Informelle roller i eit gruppesamarbeid kan i hovudsak deles i to roller; instrumentelle roller og sosio-emosjonelle roller. \\
 
-Benne og Sheat beskreiv i 1948, tretten instumentelle roller. Her tar eg for meg nokon av dei som var mest fremmtredene i vår gruppe; initiativtakeren, informasjonssøkaren, informasjonsgiveren, meiningsøkjaren, meiningsgivaren, diagnostikeren, samordnaren, opplysnaren, energigiveren og kritikkeren. Desse er alle viktige roller på gruppa. 
+I Robert-Bales likevektsteori statuerer han viktigheten ved ein balanse mellom arbeidsoppgåver og sosial-emosjonelle aktiviteter i effektive grupper. I effektive grupper ser ein derfor ofte at eit medlem trer inn i rolla som instrumentell leder, mens ein annan trer inn i rolla som sosial-emosiell leder. Kjenneteiknet på ein instrumentell-leder er at det er ofte han som setter igang aksjoner for å sikre at målet til gruppa blir nådd (oppgåveretta aksjoner), mens den sosiall-emosielle lederen setter igang aksjoner for å oppretthalde og forbedre interrelasjonene i gruppa (relasjonsretta aksjoner).\\
 
-Meiningsøkjaren spelar ein viktig del på gruppa ved at han innbyr til beslutningstaking, og legg grunnlaget for individ til å fremleggje sin vurdering av framlagte fakta. Diagnostikeren er den analyserende parten på gruppa, som tar opp problemer/utfordringer ved oppgåve, og eventuelt leder gruppa i ei ny retning. Samordnaren derimot bidrar ved å samkjøre gruppas arbeid og flette dei samman til ein heilhet.
+%I ein flatstrukturert gruppe er lederrollen ofte avhengig av situasjoner gruppa møter. Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva %funksjon gruppa treng til ein kvar tid. Ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa, og kan vera enten oppgåveretta aksjoner og relasjonsretta/samholdsretta aksjoner. 
 
-Benne og Sheat satt og opp åtte sosio-emosjonelle roller i ei gruppe; oppmuntraren, harmoniseraren, spenningoppløseren, kompromisten, målvakten, kjenslertolken, normsetteren og følgeren. Ein målvakt verkar som ein slags ordstyrar, som øker kommunikasjonen ved å bremse pratmakerene og passe på at alle kjem til ordet. Desse rollene kan flukturerer mellom medlemmene på gruppa, men ofte ser ein at eit individ påtar seg nokon roller med høgare frekvens.
+Benne og Sheat beskreiv i 1948, tretten instumentelle roller. Her tar eg for meg nokon av dei som var mest fremmtredene i vår gruppe; initiativtakeren, informasjonssøkaren, informasjonsgiveren, meiningsøkjaren, meiningsgivaren, diagnostikeren, samordnaren, opplysnaren, energigiveren og kritikkeren.\\
+
+ Desse er alle viktige roller på gruppa. Meiningsøkjaren spelar ein viktig del på gruppa ved at han innbyr til beslutningstaking, og legg grunnlaget for individ til å fremleggje sin vurdering av framlagte fakta. Diagnostikeren er den analyserende parten på gruppa, som tar opp problemer/utfordringer ved oppgåve, og eventuelt leder gruppa i ei ny retning. Samordnaren derimot bidrar ved å samkjøre gruppas arbeid og flette dei samman til ein heilhet.\\
+
+Benne og Sheat satt og opp åtte sosio-emosjonelle roller i ei gruppe; oppmuntraren, harmoniseraren, spenningoppløseren, kompromisten, målvakten, kjenslertolken, normsetteren og følgeren. Ein målvakt verkar som ein slags ordstyrar, som øker kommunikasjonen ved å bremse pratmakerene og passe på at alle kjem til ordet. Desse rollene kan flukturerer mellom medlemmene på gruppa, men ofte ser ein at eit individ påtar seg nokon roller med høgare frekvens.\\
