--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -27,5 +27,12 @@
 	title="Maturity and effectiveness in small groups",
 	journal="Nordic psychology",
 	year="2006"
+
 }
-	
+@inbook{svenskeboka,
+	author="Eva Hammar Chiriac \& Anders Hempel",
+	title="Handbok för grupparbete -att skapa fungerande grupparbete i undervisnongen",
+	chapter="5: I grupparbete spelar rollerna roll",
+	publisher="Studentlitteratur, Lund",
+	year="2005"
+}	
