Omformulerte noen setninger.

--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -87,9 +87,8 @@ det en god pekepinn på punkter som bør være i samarbeidskontrakten.
 \section{Johnson \& Johnson}
 \subsection{Gruppedynamikk}
 Gruppedynamikk handler om den vitenskapelige studien av oppførsel i grupper.
-Adferd i grupper, og forståelsen av den, er essensielt, da mennesker i all
-hovedsak er gruppedyr, det være seg i familien, blant venner eller på jobb. Det
-første som må læres er; ``hva er en gruppe?''. Spørsmålet er vanskeligere enn
+Forståelsen av adferd i grupper er essensielt, da mennesker i all hovedsak er
+gruppeorientert; det være seg i familien, blant venner eller på jobb. Det første som må læres er; ``hva er en gruppe?''. Spørsmålet er vanskeligere enn
 man skulle tro, og Johnson \& Johnson (J\&J) \cite{jj} viser til at sosiologene
 fortsatt ikke er enige om én definisjon. Likevel kan man si at en gruppe er en
 samling av minimun to personer, som relaterer med hverandre ansikt til ansikt.
@@ -155,7 +154,15 @@ Punkt 1 kaller Wheeland for ''the fundamental attribution error'', fordi vi ofte
 
 Punkt 2 dreier seg om å være klar over hva som foregår i gruppearbeidet. Hvis man ikke forstår hva som foregår, må man våge å spørre. Å stille spørsmål til hele gruppa vil føre til en rikere diskusjon og vil klargjøre ting for alle gruppemedlemmer. \\
 
-Punkt 3 tar opp problemet med at medlemmer i gruppa ikke tør å si det de mener fordi de ofte klassifiserer andre i gruppa, og ut i fra det angir dem høyere eller lavere status. Disse medlemmene kan bli ignorert i gruppa, noe som fører til at gruppa blir mindre produktiv. En måte å sikre at alle blir hørt på er så enkelt som å ta en runde rundt bordet for å høre hva hver og en har å si. \\
+Punkt 3 diskuterer problemet rundt hierarki. Ubevisst eller bevisst
+klassifiserer vi personer rundt oss i forhold til oss selv, det være seg
+henholdsvis høyere eller lavere status. De medlemmene som rangerer seg lavest på
+gruppa vil ofte vegre seg for å si det de mener, og blir ofte
+ignorert/tilsidesatt i gruppeprosessen. Det er derfor viktig å etablere gode
+kommunikasjonsrutiner som sikrer at alle blir hørt, eksempelvis ``runde rundt
+bordet'', hvor alle \emph{må} komme med sitt syn på saken. 
+
+%Punkt 3 tar opp problemet med at medlemmer i gruppa ikke tør å si det de mener fordi de ofte klassifiserer andre i gruppa, og ut i fra det angir dem høyere eller lavere status. Disse medlemmene kan bli ignorert i gruppa, noe som fører til at gruppa blir mindre produktiv. En måte å sikre at alle blir hørt på er så enkelt som å ta en runde rundt bordet for å høre hva hver og en har å si. \\
 
 Punkt 4 handler om oppgaveorientert diskusjon i gruppen. Forskning tyder på at suksessfulle grupper bruker om lag 70-80 \% av tiden sin til å diskutere oppgave og mål. Men ofte hender det at gruppa går seg bort i en lang diskusjon om noe annet. \\
 
