fiksa min del i medlemmer.tex

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -7,11 +7,11 @@ er godt skikket til å finne de riktige differensiallikningene som beskriver
 det fysiske systemet som skal studeres.
 
 \subsection*{Innstilling til gruppearbeid}
-Åsmund har hatt både positive og negative erfaringer med gruppearbeid tidligere.
-Han har merket seg at de gruppene han har negative erfaringer fra ofte har hatt
+Jeg har hatt både positive og negative erfaringer med gruppearbeid tidligere.
+Jeg har merket seg at de gruppene jeg har negative erfaringer fra ofte har hatt
 medlemmer som ikke har vært motiverte for arbeidsoppgaven. Dette har delvis
-motivert hans valg av MiA som landsby, da han tror at de som velger MiA er
-innstilte på å gjøre en god jobb.
+motivert mitt valg av MiA som landsby, da jeg tror at de som velger MiA er
+innstilt på å gjøre en god jobb.
 
 \subsection*{Gruppa om Åsmund}
 
