Skrevet første del av språkdebatt

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -36,6 +36,31 @@ Me har og hatt framføring av grupperapport og prossessrapport idag. Gruppa er f
 
 \section{Bruk av regler/kontrakt}
 %Situasjon: Knut Halvor og språk på prosessrapport
+
+Gruppen ble tidlig enig om at prosjektrapporten skulle skrive på engelsk, så på
+dette punktet oppnådde vi, i overenstemmelse med samarbeidskontrakten (appendiks
+XXXXXX) - en konsensusavgjørelse. Da gruppa skulle avgjøre språket i
+prosessrapporten ble det større problemer. Knut Halvor og Paul var veldig for å
+skrive på engelsk, mens Turid, Joakim og Åsmund helst ville skrive på norsk. Det
+ble, i henhold til J\&J \cite{jj}, Wheelan \cite{wheelan} óg Schwarz
+\cite{schwarz} - arrangert en runde rundt bordet hvor hver enkelt måtte legge
+frem argumenter for sitt standpunkt. Dette ble gjort for at uenigheten skulle
+bli brukt til noe positivt, og at gruppa skulle komme mer sammensveist ut av
+tvisten. Dette samsvarer godt med J\&Js teori (se \cref{sec:jj}) som beskriver
+fire steg for effektivt å forbedre en gruppeidentitet: presenter egne meninger,
+lytt til andres meninger, dann en felles gruppeidentitet - anta denne identiten.
+På grunn av punktet om konsensusavgjørelser i samarbeidskontrakten, ble det
+derfor brukt mye tid på å prøve og nå nettopp det. Etter godt og vel en time med
+diskutering skjærte derfor Knut Halvor i gjennom og ba om en
+flertallsavgjørelse. Dette er i henhold til gruppas beslutningsmønster, som sier
+at ved manglende konsensus skal flertallet bestemme. Avstemmingen resulterte i
+at prosessrapporten skulle skrives på norsk. $\\$
+Paul skriver i sin private logg ``selv om jeg var uenig i at rapporten skulle
+skrives på norsk, gjør prosessen rundt avgjørelsen det lettere å takle
+`nederlaget'''. Dette viser bare at Johnson \& Johnson sin teori \cite{jj} om
+hvordan å få ulikheter blant gruppemedlemmene til å styrke gruppen fungerer i
+praksis.
+
 %Situasjon: Rapportering da Joakim var syk
 
 \section{Teori vs. virkelighet}
