--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -124,7 +124,7 @@ overlappet til en viss grad med det nye om fremdriftsplan. $\\$
 Gruppa hadde også lagt merke til at punktet om tildelte oppgaver skulle føres
 inn på wiki-siden aldri ble brukt. At kun tre på gruppa (Joakim, Åsmund og Knut)
 hadde kjennskap til github (stedet hvor gruppa lagrer informasjon) kan til dels
-ta skylden for det, i tillegg påvirket mangelen av en fremdriftsplan hvert
+ta skylden for det. I tillegg påvirket mangelen av en fremdriftsplan hvert
 gruppemedlems oppfatning av egne arbeidsoppgaver. Etter som tiden gikk ble det,
 forståelig nok, endel murring fra Paul og Turid, som følte at det var vanskelig
 å følge utviklingen. Det ble derfor avtalt at gruppa skulle møtes førstkommende
@@ -147,7 +147,7 @@ slalomski utover sesongen. Resten av gruppa var noe mer moderate i
 begeistringen. Det ble derfor arrangert ``høring'' hvor samtlige gruppemedlemmer
 kom med forslag. Disse ble så samlet og diskutert, og gruppa forsøkte å finne en
 oppgave hvor alle kunne bidra. Valget falt derfor på steking av bacon i
-microbølgeovn. Da dette hadde et massivt innslag av numerikk, programmering og
+microbølgeovn, da dette hadde et massivt innslag av numerikk, programmering og
 fysikk. Disipliner gruppa dekte meget godt mellom seg. $\\$
 
 I samarbeidskontrakten er gruppestrukturen betegnet som ``riddere av det runde
@@ -160,11 +160,11 @@ til å skrive på norsk, og det gikk ikke å ``vinne'' han over. Etter noen
 minutter med diskusjon ble altså Knut Halvor overstyrt.
 
 \subsection{Roller i gruppa}
-"Ein person blir ein leder når han eller hun blir satt i ein lederposisjon."
+``Ein person blir ein leder når han eller hun blir satt i ein lederposisjon.'' \\
 
 %" Lederskap begynner med ein formel rolle struktur som definerer gruppe hierakiet av autoritet.(Authority; legitimate power assigned to a particular position.)
 
-I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. \emph{her må vi ha et eksempel} I praksis fekk gruppa ein situasjonsbetinget lederstruktur (ref.).\\
+I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. \emph{her må vi ha et eksempel} I praksis fekk gruppa ein situasjonsbetinget lederstruktur. Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid, der ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa%, og kan vera enten oppgåveretta aksjoner og relasjonsretta/samholdsretta aksjoner. 
 
 Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen dei hadde mest autoritet på. Åsmund blei dermed ein uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen i c++. Dei tok dermed ansvar for framgang og oppgåvedeling på desse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på sitt respektive felt. \\
 
