--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -170,15 +170,15 @@ Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok
 
 I vår gruppe såg me at Åsmunde i større grad gjekk inn i rolla som oppgåve-leder. Han tok ansvar for å settje opp eit system for å utveksle informasjon rundt prosjektet, github, og tok ofte intiativ ved å leggje ut relevante artikler på sida. Han gjekk dermed og inn i rolla som  samordneren (ref) på gruppa. Me merka oss og at han var meir aktiv i prosjektet i EIT, som er den delen som er mest oppgåvefokusert. \\
 
-Bales staturer at medlemmer som er veldig oppgåvefokusert er mindre innvolvert i relasjonsretta aksjoner. Paul er den i gruppa som er mest oppgåvefokusert.På gruppa har han ein tendens til å ta ein faglig tilnærming, og liker å fokusere mest på oppgåva for hand. Han fell alstå oftere inn i rolla som diagnostiker (ref) og informasjonssøkjande (ref). Han er dermed ein styrke på gruppa ved at han held diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når det gjeld å gjennomføre arbeid i tide. Me ser likevel ein tendens til at Paul er mindre involvert i relasjonsretta aksjoner på gruppa. \\
+Bales staturer at medlemmer som er veldig oppgåvefokusert er mindre innvolvert i relasjonsretta aksjoner. (ref) Paul er den i gruppa som er mest oppgåvefokusert.På gruppa har han ein tendens til å ta ein faglig tilnærming, og liker å fokusere mest på oppgåva for hand. Han fell alstå oftere inn i rolla som diagnostiker (ref) og informasjonssøkjande (ref). Han er dermed ein styrke på gruppa ved at han held diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når det gjeld å gjennomføre arbeid i tide. Me ser likevel ein tendens til at Paul er mindre involvert i relasjonsretta aksjoner på gruppa. \\
 
 Den som oftas gjekk inn i rolla som sosial-emosionell leder var Turid. Ho var eit viktig ledd i gruppa i form av å uttrykke klare meininger og frustrasjoner over moment i gruppa som ikkje fungerte optimalt. Ho gjekk dermed inn i rolla som kritiker og kjensletolker (ref). Når det var ting som fungerte bra i gruppa kom ho og inn med støtte og oppmuntring til å fortsette på samme linje. Sjølv om ho var ein av dei som oftest var innvolvert i diskusjoner/konflikter, var ho og ofte den som løyste dei, enten gjennom forhandlinger eller ved å trekkje seg tilbake når ho gjekk for langt. Turid var og det medlemmet i gruppa som oftes tok initiativ og ledelse i prossessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppa. Her verka ho ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på at alle kom til ordet.
 Situasjon: Paul og Turid.\\
 
-Bale's statuerer og at sosial-emotionell aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim var innvolvert fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet i gruppa. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.\\
+Bale's statuerer og at sosial-emotionell aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim var innvolvert fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.\\
 
 Det bur ein liten kritikker i samtlige medlemmer på gruppa. Me ser likevel at Knut har tatt på seg denne rolla i gruppa i større grad enn andre. Kritikkaren er viktig i gruppesamanheng ved «systematisk, åpen, støttande og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
-Dette gjøres på ein måte slik at medlemmer på gruppa ikkje opplever kritikken som ein trussel, og dermed beholder fokuset på oppgåveløysning. (Innlegg frå andre).\\
+Dette gjøres på ein slik måte at medlemmer på gruppa ikkje opplever kritikken som ein trussel, og dermed beholder fokuset på oppgåveløysning. (Innlegg frå andre).\\
 
 ref // (1) Handbok for gruppearbeidet\\
 
