Endret uklarhet på regler, avtaler og kontrakt

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -117,9 +117,10 @@ enkelte punkter var redundante, mens andre måtte legges til. Særs punktet om
 kaffemøtene før oppstart har vist seg effektivt, da det tilbyr en uhøytidelig
 setting hvor synspunkter kan deles og diskuteres. Det ble i
 tillegg lagt merke til at gruppemedlemmenes individuelle oversikt var manglende, og et nytt
-punkt vedrørende fremdriftsplaner ble lagt til. Et eksempel på et punkt som
-utgikk var at alle oppgaver skulle føres inn på gruppas wiki-side, dette
-overlappet til en viss grad med det nye om fremdriftsplan. $\\$
+punkt vedrørende fremdriftsplaner ble lagt til. Noe som ble fjernet var punktet
+om at alle oppgaver skulle føres inn på gruppas wiki-side, da det 1) aldri ble
+fulgt opp, og 2) til en viss grad ble erstattet med det nye punktet om
+fremdriftsplan. $\\$
 
 Gruppa hadde også lagt merke til at punktet om tildelte oppgaver skulle føres
 inn på wiki-siden aldri ble brukt. At kun tre på gruppa (Joakim, Åsmund og Knut)
