--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -118,8 +118,8 @@ kaffemøtene før oppstart har vist seg effektivt, da det tilbyr en uhøytidelig
 setting hvor synspunkter kan deles og diskuteres. Det ble i
 tillegg lagt merke til at gruppemedlemmenes individuelle oversikt var manglende, og et nytt
 punkt vedrørende fremdriftsplaner ble lagt til. Noe som ble fjernet var punktet
-om at alle oppgaver skulle føres inn på gruppas wiki-side, da det 1) aldri ble
-fulgt opp, og 2) til en viss grad ble erstattet med det nye punktet om
+om at alle oppgaver skulle føres inn på gruppas wiki-side, da det \textbf{1)} aldri ble
+fulgt opp, og \textbf{2)} til en viss grad ble erstattet med det nye punktet om
 fremdriftsplan. $\\$
 
 Gruppa hadde også lagt merke til at punktet om tildelte oppgaver skulle føres
