oppdatert situasjon ved oppstart

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -21,12 +21,12 @@ hjelpende av natur. I gruppearbeidet er han meget aktiv, men kan bli oppslukt i 
 melder seg da litt ut av gruppa. Han har en rik form for humor som favner
 mye, noe som bidrar til god og avslappet stemning på gruppa. Åsmund er vårt
 ordensmenneske, som har oversikt over de ulike trådene og syr de sammen til det
-endelige resultate, både hva angår prosess og prosjekt.
+endelige resultatet, både hva angår prosess og prosjekt.
 
 \person{Joakim}
-Joakim studerer sivilingeniør Bygg- og miljøteknikk, med
+Jeg studerer sivilingeniør Bygg- og miljøteknikk, med
 spesialiseringen innenfor konstruksjonsteknikk og beregningsmekanikk. Fra før
-har han erfaring med teamarbeid gjennom førsteklassefaget Fysisk
+har jeg erfaring med teamarbeid gjennom førsteklassefaget Fysisk
 Miljøplanlegging, som på lik linje med EiT hadde en prosjektrapport og
 prosessrapport som evalueringsform.
 
@@ -64,7 +64,7 @@ på lang sikt.
 Studerer ved industriell matematikk ved linja numerisk matematikk ved NTNU, med hovedvekt på numerisk matematikk. Har tidligere gått på folkehøgskole ved linja søm og design og handball. Var med på UKA-06 som kostymedesigner for revyen.
 
 \subsection*{Innstilling til Gruppearbeid}
-Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse gruppene har midlertidig vært prega av en homogenitet i forhold til fag bakgrunn. Det har gjort at vi angriper nye problemstillinger med en lik tankegang, og vi mister evnen til å komme opp med mer kreative ideer til løsningsmetoder. De differansene som jeg har opplevd i samband av gruppearbeid, har ofte grunna i ulike personligheter og kommunikasjonstil. Da vi ikke har hatt noe opplæring i å takle ulike differanser og konflikter som disse ofte fører til, har disse differansene ofte hatt en negativ innvirkning på gruppearbeidet i form av uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten med å lære mer om sjølve gruppeprosessen og gruppedynamikk for å kunne takle slike situasjoner annerledes i framtida. Jeg trives vanligvis godt i grupper, og synes gruppearbeid kan være både fremende og utfordrende.  Jeg såg derfor fram til å jobbe i ei mer heterogen gruppe, med tanke på fag bakgrunn.
+Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse gruppene har midlertidig vært prega av en homogenitet i forhold til fagbakgrunn. Det har gjort at vi angriper nye problemstillinger med en lik tankegang, og vi mister evnen til å komme opp med mer kreative ideer til løsningsmetoder. De differansene som jeg har opplevd i samband av gruppearbeid, har ofte grunna i ulike personligheter og kommunikasjonstil. Da vi ikke har hatt noe opplæring i å takle ulike differanser og konflikter som disse ofte fører til, har disse differansene ofte hatt en negativ innvirkning på gruppearbeidet i form av uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten med å lære mer om sjølve gruppeprosessen og gruppedynamikk for å kunne takle slike situasjoner annerledes i framtida. Jeg trives vanligvis godt i grupper, og synes gruppearbeid kan være både fremende og utfordrende.  Jeg såg derfor fram til å jobbe i ei mer heterogen gruppe, med tanke på fagbakgrunn.
 
 
 %\subsection*{Turid om sin rolle i gruppa}
@@ -113,7 +113,7 @@ løsningsmetoder hjelper han å få organisert tankene sine.
 Knut Halvor er gruppas datamann, noe som definerer hans forhold til gruppa i
 stor grad. Han er flink til å bidra med sin kompetanse i diskusjoner, og står på
 sine meninger når man skal ta en avgjørelse som har å gjøre med hans fagfelt. På
-mange måter en Knut Halvor den mest faglig kritiske i gruppa. Det at han hovedsaklig
+mange måter er Knut Halvor den mest faglig kritiske i gruppa. Det at han hovedsaklig
 jobber med programmering og er veldig selvstendig, er avgjørende for kvaliteten på 
 gruppas sluttresultat, men har også gjort at det tok lengre tid før gruppa ble godt 
 kjent med ham.
