--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -84,12 +84,12 @@ problemstillingen ytterligere.
 
 I fjerde landsbydag fikk gruppen i oppgave å presentere oppgaven vi hadde valgt,
 og litt hvordan vi skulle løse den. Dette medførte til at gruppen ble mer
-fokusert på hva vi skulle gjøre. Ettersom det begynte å bli en del ting å gjøre,
-satt tok Turid en aksjon og delte ut oppgaver gruppemedlemmene skulle gjøre til
-neste dag. Dette gjorde hun fordi hun var frustrert over manglende initiativ.
-Med presentasjonen av problemstilling ble det klart hva gruppa skulle gjøre, hva
-som var gruppas hovedmål, og hva som kunne gjøres videre hvis vi skulle få
-ekstra tid.
+fokusert på hva vi skulle gjøre. Ettersom det begynte å bli en del arbeid,
+gjorde Turid en aksjon og delte ut oppgaver til gruppemedlemmene. 
+Dette gjorde hun fordi hun var frustrert over manglende initiativ. Gruppa opplevde da
+at Turid hadde en styrende rolle i gruppa. Likevel mente gruppa at dette var positivt
+fordi det var nødvendig å få til aksjoner for at gruppas mål skull bli nådd. I følge teorien
+presentert i \cref{avs:roller} hadde Turid en rolle som oppgaveleder. 
 
 
 \section{Formulering av problemstillingen}
