--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -4,7 +4,7 @@
 
 
 Flere faktorer påvirker en gruppes effektivitet; har gruppen et klart mål? Er
-medlemmene enig om arbeidsmetode, og er de motiverte for den? For å forenkle
+medlemmene enige om arbeidsmetode, og er de motiverte for den? For å forenkle
 jobben som fasilitator, og/eller gi gruppemedlemmene mulighet til å påvirke
 effektiviteten selv, har Schwarz utviklet en ``modell'' for hva som gjør grupper
 effektive. Det er verdt å merke seg at Schwarz siterer George Box i
@@ -27,7 +27,7 @@ Disse kriteriene er avhengige av hverandre, og for at en gruppe skal være
 effektiv må den møte alle tre kritierer. Bryter gruppen på ett punkt vil det
 påvirke de andre, for eksempel: Hvis en gruppe håndterer konflikter på en slik
 måte at tilliten mellom medlemmene avtar, vil det på sikt føre til at medlemmene
-holde informasjon tilbake fra resten av gruppen. Dette vil igjen føre til at
+holder informasjon tilbake fra resten av gruppen. Dette vil igjen føre til at
 nøkkelinformasjon ikke er tilgjengelig for samtlige gruppemedlemmer, og gruppen
 vil bli ineffektiv.
 
@@ -175,7 +175,7 @@ For at ei gruppe skal kunne fungere effiktivt, er det viktig at medlemmer klarer
 For å forstå gruppekommunikasjonen i eit team, er det to ting som er viktige å sjå nærmere på; kommunikasjonsmønsteret/ kommunikasjonsnettverk og kommunikasjonseffektiviteten. Ved kommunikasjonsmønsteret meiner me her kven som kommunniserer med kven. Me kan her snakke om ein einvegskommunikajsone, der lederen adresserer gruppa, eller ein toveiskommunikasjon, som t.d. myldring blant gruppemedlemmer. Kommunikasjonseffektiven er her definert som evnen til å formidle ein beskjed på ein slik måte at mottakeren tolker beskjeden slik som sender sjølv har tenkt.
 Variable som kan verke inn på gruppe kommunikasjonen er normer på gruppa, konkurranse innad i gruppa, arbeidsmiljet, sittearrangementer og humor innad i gruppa.
 \\
-\section{Roller}
+\section{Roller} \label{avs:roller} 
 «I grupparbete spelar rollerna roll» (Stefan Jern, (1))\\
 
 «Ei rolle kan defineres som ein spesiell type særegenhet, som definerer din plass på gruppa». Ei gruppe består av ulike individ som kvar har sine særegenskaper. Desse personlige trekka er ein faktor som er med på å definere kva rolle eit medlem vil spele på gruppa.  Når ei gruppe går sammen, byggjes det forventninger til rolla dei andre vil ha på gruppa utfrå inntrykket dei får av individet. Dine egne forventninger og gruppas forventninger til di rolle er i stor grad med på å forme den rolla du vil ha i gruppa vidare. I eit gruppesamarbeid med flat struktur snakker me her om informelle roller. Informelle roller er roller som vekser fram gjennom samspelet i gruppa. Informelle roller i eit gruppesamarbeid kan i hovudsak deles i to roller; instrumentelle roller og sosio-emosjonelle roller. 
