Skrev om situasjon "syk Joakim" :P

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -34,6 +34,7 @@ Me har og hatt framføring av grupperapport og prossessrapport idag. Gruppa er f
 %Situasjon: øvelsen med evaluering ``det enkelte teammedlem''
 %Situasjon: legomannen - bruk gruppelogg, men prøv å dra parallell til hvordan vi arbeider generelt.
 
+
 \section{Bruk av regler/kontrakt}
 %Situasjon: Knut Halvor og språk på prosessrapport
 
@@ -59,9 +60,18 @@ Paul skriver i sin private logg ``selv om jeg var uenig i at rapporten skulle
 skrives på norsk, gjør prosessen rundt avgjørelsen det lettere å takle
 `nederlaget'''. Dette viser bare at Johnson \& Johnson sin teori \cite{jj} om
 hvordan å få ulikheter blant gruppemedlemmene til å styrke gruppen fungerer i
-praksis.
+praksis. $\\$
 
 %Situasjon: Rapportering da Joakim var syk
+
+Et annet eksempel på anvendelse av samarbeidskontrakten var da Joakim lå syk, i
+gruppeloggen står det ``Joakim sendte sms til gruppa før oppmøte, han handler
+dermed i tråd med gruppekontrakten som sier; `gi beskjed dersom du ikke kan
+møte'.'' Turid skriver i dagboka ``Det var greit å få beskjed om at Joakim var
+syk på starten av dagen, på denne måten ble ikke gruppa unødvendig heftet i form
+av å vente på siste person.'' Dette viser at nevnte punkt fungerer godt i
+praksis, og at det har evnen til å gjøre noe som, i utgangspunktet - er negativt
+om til en positiv gruppeerfaring.
 
 \section{Teori vs. virkelighet}
 %Humor, selvironi, selvhøytidelighet - stemmer bra jamført teori 
