Changes to prosess/analyse

--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -32,7 +32,7 @@
 	\include{analyse}    %tilsvarende den brune delen
 	\include{oppsummering}
 	
-%Referanser:
+%Referanser
 	\bibliographystyle{plain}
 	\bibliography{referanser.bib}
 	\coffee{1}
