--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -8,11 +8,31 @@
 %Samspillet Åsmund->Turid->Knut med difflikn->diskretisering->programmering
 
 \section{Kommunikasjon og samspill}
-Det kommunikasjonsnettverka som blei nytta på gruppa vår opent nettverk og sirkel nettverk. I eit opent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kjem tydelig fram i diskusjoner på gruppa der det er fri flyt av ideer og meininger. Når ein avgjørelse blir tatt på gruppa starter me ofte med ein open diskusjon, og utvekslinger av meininger. Før ein avgjørelse blir tatt har me vanligvis hatt ein runde rundt bordet der alle får uttrykkt sin meining om saken. Dette er ein form for sirkel nettverk, der eit medlem uttrykker sin meining før han sender ordet videre til sidemannen. Dette er ein kommunikasjonsform som har utviklet seg naturlig på gruppa. Særlig i prosessdelen har det falt naturlig å ta ein runde rundt bordet for å høyre dei ulike medlemmenes meininger od følelser. Det er ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i ein rolle som ordstyrer. 
+Det kommunikasjonsnettverka som blei nytta på gruppa vår opent nettverk og sirkel nettverk. I eit opent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kjem tydelig fram i diskusjoner på gruppa der det er fri flyt av ideer og meininger. Når ein avgjørelse blir tatt på gruppa starter me ofte med ein open diskusjon, og utvekslinger av meininger. Før ein avgjørelse blir tatt har me vanligvis hatt ein runde rundt bordet der alle får uttrykkt sin meining om saken. Dette er ein form for sirkel nettverk, der eit medlem uttrykker sin meining før han sender ordet videre til sidemannen. Dette er ein kommunikasjonsform som har utviklet seg naturlig på gruppa. Særlig i prosessdelen har det falt naturlig å ta ein runde rundt bordet for å høyre dei ulike medlemmenes meininger og følelser. Her er ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i ein rolle som ordstyrer. Etterkvart som gruppa blei bedre kjent var det fleire som gjekk inn i rolla som ordstyrar, når dei følte det var nødvendig. Dette førte til at me fekk ein naturlig styringsprossess ved gruppediskusjoner, utan at me trengte å skrive ein formell regel i gruppekontrakten.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Gruppelogg 4:
+Det noteres at gruppedynamikken har blitt ganske god iløpet av disse ukene, og
+debatten rundt problemstilling var frisk og nyansert. Diskusjonene fører til noe
+konkret, og folk er flinke til å myldre og å bygge på andres ideer. Når gruppa
+er enige om at nå skal vi gjøre noe, tar folk personlig initiativ uten at andre
+pusher på. Vi bemerker at det kanskje er et forbedringspotensiale på å spisse
+inn kortsiktige målsetninger når vi skal søke etter informasjon, det kan
+fort bli ineffektivt når alle gjør veldig brede søk.
+
+Gruppelogg 5:
+Gruppa drifter ganske ofte vekk fra oppgaven og prater om andre ting. Dette irriterer
+noen gruppemedlemer som prøver å få igang diskusjonen om oppgaven igjen. Det viser seg
+og at det er lett og flytte oppmerksomheten til gruppa etter en slik divergens.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \\
-\\
-Det var tidleg lagt normer som skulle gjelde for kommunikajson i gruppa. I gruppekontrakten innførte me kaffimøte om morgenen, for å diskutere framgangen og planleggje dagen vidare. (Her opna me og for at folk kunne ta opp ting før me starta dagen.) Me var likevel dårleg til å gjennomføre dette tiltaket i starten. Dette førte til at nokon av medlemmene satt uten arbeidsoppgåver, og uten oversikt over kva dei andre arbeidet med. 
+\\ 
+Det var tidleg lagt normer som skulle gjelde for kommunikasjon i gruppa. I gruppekontrakten innførte me kaffimøte om morgenen, for å diskutere framgangen og planleggje dagen vidare. (Her opna me og for at folk kunne ta opp ting før me starta dagen.) Me var likevel dårleg til å gjennomføre dette tiltaket i starten. Dette førte til at nokon av medlemmene satt uten arbeidsoppgåver, og uten oversikt over kva dei andre arbeidet med. 
 Situasjon Joakim:
+
 Det blei dermed lagt større vekt på gjennomførelsen av kaffimøte, noko som bedra effektiviteten til gruppa ved å sysselsette alle medlemmene og førte til at kvart medlem hadde ein større oversikt over kva dei andre arbeida med. I tillegg satt kaffimøte ein offisiell start på dagen, og bidrog til eit større samhold i gruppa. 
 \\
 \\
@@ -30,7 +50,7 @@ Ein annan viktig faktor på gruppa som letta kommunikasjonen på gruppa er bruk 
 \\
 Aksjoner for å betre gruppekommunikasjonen. Kaffipause, runde rundt bordet osv.!
 \section{Situasjon gruppelogg 12}
-Me har og hatt framføring av grupperapport og prossessrapport idag. Gruppa er fornøyd med egen innsats, då me fekk sagt det me skulle innenfor dei rammene som var gitt. I ein slik situasjon merkar me og at den tryggheten og innbyrde tilliten me har i gruppa er med å bidrar til ein større trygghet i framføringa. Det at me veit me har tillit frå gruppa gjer at me tør å improvisere meir i framføringa, noko som gjør framføringa meir levende. Me merker og at dei andre på gruppene følgjer med på kva ein seier når ein framføring, og er flinke til å hjelpe ein vidare dersom ein sett seg fast på eit ord eller setning. Dette virker som ei «sikringsline» som gjer at me tør å gå litt utenfor våre respektiove komfortsoner.  Me klarte og å beholde humoren me har ellers i gruppa, noko som gjer at spenninga blant dei gruppemedlemmer som er ukomfortable med å stå foran ein mengde blir lavare. "Humor tends to promote cohesiveness and reduce tension in groups" (Bloch, Browning \& McGrath 1983).
+Me har og hatt framføring av grupperapport og prossessrapport idag. Gruppa er fornøyd med egen innsats, då me fekk sagt det me skulle innenfor dei rammene som var gitt. I ein slik situasjon merkar me og at den tryggheten og innbyrde tilliten me har i gruppa er med å bidrar til ein større trygghet i framføringa. Det at me veit me har tillit frå gruppa gjer at me tør å improvisere meir i framføringa, noko som gjør framføringa meir levende. Me merker og at dei andre på gruppene følgjer med på kva ein seier når ein framføring, og er flinke til å hjelpe ein vidare dersom ein sett seg fast på eit ord eller setning. Dette virker som ei «sikringsline» som gjer at me tør å gå litt utenfor våre respektiove komfortsoner.  Me klarte og å beholde humoren me har ellers i gruppa, noko som gjer at spenninga blant dei gruppemedlemmer som er ukomfortable med å stå foran ein mengde blir lavare. ``Humor tends to promote cohesiveness and reduce tension in groups'' (Bloch, Browning \& McGrath 1983).
 %Situasjon: øvelsen med evaluering ``det enkelte teammedlem''
 %Situasjon: legomannen - bruk gruppelogg, men prøv å dra parallell til hvordan vi arbeider generelt.
 
@@ -54,7 +74,7 @@ derfor brukt mye tid på å prøve og nå nettopp det. Etter godt og vel en time
 diskutering skjærte derfor Knut Halvor i gjennom og ba om en
 flertallsavgjørelse. Dette er i henhold til gruppas beslutningsmønster, som sier
 at ved manglende konsensus skal flertallet bestemme. Avstemmingen resulterte i
-at prosessrapporten skulle skrives på norsk. $\\$
+at prosessrapporten skulle skrives på bokmål. $\\$
 Paul skriver i sin private logg ``selv om jeg var uenig i at rapporten skulle
 skrives på norsk, gjør prosessen rundt avgjørelsen det lettere å takle
 `nederlaget'''. Dette viser bare at Johnson \& Johnson sin teori \cite{jj} om
