--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -2,13 +2,11 @@
 
 %Kommentarene nedenfor gjelder situasjoner og elementer fra gruppelogg som skal
 %dras inn. I tillegg må det reflekteres, og relevant teori må dras inn
-
-\chapter{Analyse av gruppearbeidet}
+chapter{Analyse av gruppearbeidet}
 \section{Kompetanse i praksis}
-%Samspillet Åsmund->Turid->Knut med difflikn->diskretisering->programmering
 
 \section{Kommunikasjon og samspill}
-Det kommunikasjonsnettverka som blei nytta på gruppa vår opent nettverk og sirkel nettverk. I eit opent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kjem tydelig fram i diskusjoner på gruppa der det er fri flyt av ideer og meininger. Når ein avgjørelse blir tatt på gruppa starter me ofte med ein open diskusjon, og utvekslinger av meininger. Før ein avgjørelse blir tatt har me vanligvis hatt ein runde rundt bordet der alle får uttrykkt sin meining om saken. Dette er ein form for sirkel nettverk, der eit medlem uttrykker sin meining før han sender ordet videre til sidemannen. Dette er ein kommunikasjonsform som har utviklet seg naturlig på gruppa. Særlig i prosessdelen har det falt naturlig å ta ein runde rundt bordet for å høyre dei ulike medlemmenes meininger og følelser. Her er ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i ein rolle som ordstyrer. Etterkvart som gruppa blei bedre kjent var det fleire som gjekk inn i rolla som ordstyrar, når dei følte det var nødvendig. Dette førte til at me fekk ein naturlig styringsprossess ved gruppediskusjoner, utan at me trengte å skrive ein formell regel i gruppekontrakten.
+Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram i diskusjoner på gruppen der det er fri flyt av ideer og meninger. Når en avgjørelse blir tatt på gruppen starter vi ofte med en åpen diskusjon, og utvekslinger av meninger. Før en avgjørelse blir tatt har vi vanligvis hatt en runde rundt bordet der alle får uttrykt sin mening om saken. Dette er en form for sirkel nettverk, der et medlem uttrykker sin mening før han sender ordet videre til sidemannen. Dette er en kommunikasjonsform som har utviklet seg naturlig på gruppen. Særlig i prosessdelen har det falt naturlig å ta en runde rundt bordet for å høre de ulike medlemmenes meninger og følelser. Her er det ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i en rolle som ordstyrer. Etterhvert som gruppen ble bedre kjent var det flere som gikk inn i rollen som ordstyrer, når de følte det var nødvendig. Dette førte til at vi fikk en naturlig styringsprosess ved gruppediskusjoner, uten at vi trengte å skrive en formell regel i gruppekontrakten.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Gruppelogg 4:
@@ -16,41 +14,30 @@ Det noteres at gruppedynamikken har blitt ganske god iløpet av disse ukene, og
 debatten rundt problemstilling var frisk og nyansert. Diskusjonene fører til noe
 konkret, og folk er flinke til å myldre og å bygge på andres ideer. Når gruppa
 er enige om at nå skal vi gjøre noe, tar folk personlig initiativ uten at andre
-pusher på. Vi bemerker at det kanskje er et forbedringspotensiale på å spisse
-inn kortsiktige målsetninger når vi skal søke etter informasjon, det kan
-fort bli ineffektivt når alle gjør veldig brede søk.
-
-Gruppelogg 5:
-Gruppa drifter ganske ofte vekk fra oppgaven og prater om andre ting. Dette irriterer
-noen gruppemedlemer som prøver å få igang diskusjonen om oppgaven igjen. Det viser seg
-og at det er lett og flytte oppmerksomheten til gruppa etter en slik divergens.
-
+pusher på.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \\
 \\ 
-Det var tidleg lagt normer som skulle gjelde for kommunikasjon i gruppa. I gruppekontrakten innførte me kaffimøte om morgenen, for å diskutere framgangen og planleggje dagen vidare. (Her opna me og for at folk kunne ta opp ting før me starta dagen.) Me var likevel dårleg til å gjennomføre dette tiltaket i starten. Dette førte til at nokon av medlemmene satt uten arbeidsoppgåver, og uten oversikt over kva dei andre arbeidet med. 
+Det ble tidlig lagt normer som skulle gjelde for kommunikasjon i gruppen. I gruppekontrakten innførte vi kaffemøte om morgenen, for å diskutere framgangen og planlegge dagen videre. (Her åpnet vi og for at folk kunne ta opp ting før vi starta dagen.) Vi var likevel dårlig til å gjennomføre dette tiltaket i starten. Dette førte til at noen av medlemmene satt uten arbeidsoppgaver, og uten oversikt over hva de andre arbeidet med. 
 Situasjon Joakim:
-
-Det blei dermed lagt større vekt på gjennomførelsen av kaffimøte, noko som bedra effektiviteten til gruppa ved å sysselsette alle medlemmene og førte til at kvart medlem hadde ein større oversikt over kva dei andre arbeida med. I tillegg satt kaffimøte ein offisiell start på dagen, og bidrog til eit større samhold i gruppa. 
+Det ble dermed lagt større vekt på gjennomførelsen av kaffemøte, noe som bedret effektiviteten til gruppen ved å sysselsette alle medlemmene og førte til at hvert medlem hadde en større oversikt over hva de andre arbeidet med. I tillegg satt kaffemøte en offisiell start på dagen, og bidrog til et større samhold i gruppen. 
 \\
 \\
 Andre tiltak?
 \\
 \\
-Miljøet og fysiske faktorer kan ha ein stor innverknad på kommunikasjonen i gruppa. Me har sjølv merka att kommunikasjonen ofte blir skarpere og meir ampert når me har jobba over ein lengre og intensiv periode uten pauser. Dette har me prøvd å gjort noko med ved å være flinkere til å ta pauser. Spesielt når nokon merker at andre medlemmer på gruppa byrjar å bli slitne og irritable er det viktig at andre tar initiativ til pauser. 
-Rommet me satt på hadde og dårlig ventilasjon, noko som førte til at gruppemedlemmer fort blei tunge i hovudet og slitne. I etterkant ser me at me kunne vore meir selektive på lokale me valgte å jobbe i, siden miljøet har mykje å sei for trivselen til medlemmene.
+Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i gruppen. Vi har selv merket at kommunikasjonen ofte blir skarpere og mer ampert når vi har jobbet over en lengre og intensiv periode uten pauser. Dette har vi prøvd å gjort noe med ved å være flinkere til å ta pauser. Spesielt når noen merker at andre medlemmer på gruppa begynner å bli slitne og irritable er det viktig at andre tar initiativ til pauser. 
+Rommet vi satt på hadde og dårlig ventilasjon, noe som førte til at gruppemedlemmer fort ble tunge i hodet og slitne. I etterkant ser vi at vi kunne vært mer selektive på lokale vi valgte å jobbe i, siden miljøet har mye å si for trivselen til medlemmene.
 \\
-(Korleis gruppemedlemmer velgjer sittearrangementet, kan sei mykje om dynamikken i gruppa. Me arrangerte bordet me satt rundt som eit kvadrat. Det var dermed ingen plasser rundt bordte som ga ein høgare status til nokon av medlemmene, noko som understreker den flate strukturen på gruppa.)
-\\
-\\
-Ein annan viktig faktor på gruppa som letta kommunikasjonen på gruppa er bruk av humor. Dette er noko som går igjen i gruppa vår. Heilt frå byrjinga har det vore ei lett og god stemning mellom gruppemedlemmene. Dette gjer at me har ein lavare terkels for å uttrykke sterke meininger eller uenighet. Me har og ein høg grad av sjølvironi på gruppa. Det at gruppemedlemmer ikkje tar seg sjølv så høytidlige, gjer at det blir lettere å ta opp ikkje-tema. Gjennom studier er det og vist at effektiviteten til gruppa auker ved bruk av passende og ofte sjølvdirektet humor. Gjennom bruk av humor på gruppa, har me blitt tryggere på kvarandre, og dermed jobba sammen meir effektivt. Me er ikkje redde for å tråkke kvarandre på "tærne", noko som gjer at me kan være den me er. 
+(Hvordan gruppemedlemmer velger sittearrangementet, kan si mye om dynamikken i gruppen. Vi arrangerte bordet vi satt rundt som et kvadrat. Det var dermed ingen plasser rundt bordet som gav en høyere status til noen av medlemmene, noe som understreker den flate strukturen på gruppen.)
 \\
 \\
-Aksjoner for å betre gruppekommunikasjonen. Kaffipause, runde rundt bordet osv.!
+En annen viktig faktor på gruppen som lettet kommunikasjonen på gruppen er bruk av humor. Dette er noe som går igjen i gruppen vår. Helt frå begynnelsen har det vært en lett og god stemning mellom gruppemedlemmene. Dette gjør at vi har en lavere terskel for å uttrykke sterke meninger eller uenigheter. Vi har og en høy grad av selvironi på gruppen. Det at gruppemedlemmer ikke tar seg selv så høytidelige, gjør at det blir lettere å ta opp ikke-tema. Gjennom studier er det og vist at effektiviteten til gruppen øker ved bruk av passende og ofte selvrettet humor. Gjennom bruk av humor på gruppen, har vi blitt tryggere på hverandre, og dermed jobbet sammen mer effektivt. Vi er ikke redde for å tråkke hverandre på ``tærne'', noe som gjør at vi kan være den vi er. 
+\\
+\\
+Aksjoner for å betre gruppekommunikasjonen. Kaffepause, runde rundt bordet osv.!
 \section{Situasjon gruppelogg 12}
-Me har og hatt framføring av grupperapport og prossessrapport idag. Gruppa er fornøyd med egen innsats, då me fekk sagt det me skulle innenfor dei rammene som var gitt. I ein slik situasjon merkar me og at den tryggheten og innbyrde tilliten me har i gruppa er med å bidrar til ein større trygghet i framføringa. Det at me veit me har tillit frå gruppa gjer at me tør å improvisere meir i framføringa, noko som gjør framføringa meir levende. Me merker og at dei andre på gruppene følgjer med på kva ein seier når ein framføring, og er flinke til å hjelpe ein vidare dersom ein sett seg fast på eit ord eller setning. Dette virker som ei «sikringsline» som gjer at me tør å gå litt utenfor våre respektiove komfortsoner.  Me klarte og å beholde humoren me har ellers i gruppa, noko som gjer at spenninga blant dei gruppemedlemmer som er ukomfortable med å stå foran ein mengde blir lavare. ``Humor tends to promote cohesiveness and reduce tension in groups'' (Bloch, Browning \& McGrath 1983).
+Vi har hatt framføring av grupperapport og prosessrapport idag. Gruppen er fornøyd med egen innsats, da vi fekk sagt det vi skulle innenfor de rammene som var gitt. I en slik situasjon merker vi og at den tryggheten og innbyrdes tilliten vi har i gruppen er med å bidrar til en større trygghet i framføringen. Det at vi vet vi har tillit frå gruppen gjør at vi tør å improvisere mer i framføringen, noe som gjør framføringen mer levende. Vi merker og at de andre på gruppene følger med på hva en sier når en snakker, og er flinke til å hjelpe en videre dersom en setter seg fast på et ord eller setning. Dette virker som ei ``sikringsline'' som gjør at vi tør å gå litt utenfor våre respektive komfortsoner. Vi klarte og å beholde humoren vi har ellers i gruppen, noe som gir at spenningen blant de gruppemedlemmer som er ukomfortable med å stå foran en mengde blir lavere. ``Humor tends to promote cohesiveness and reduce tension in groups'' (Bloch, Browning \& McGrath 1983).
 %Situasjon: øvelsen med evaluering ``det enkelte teammedlem''
 %Situasjon: legomannen - bruk gruppelogg, men prøv å dra parallell til hvordan vi arbeider generelt.
 
