--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -1,5 +1,5 @@
 %Overskriftene er kokt rett fra prosess-rapport-presentasjonen. Endre dem.
-
+asd
 \chapter{Oppstart og utvikling}
 
 \section{Situasjon ved oppstart}
